fix the header on mobile

--- a/resources/luxe.css
+++ b/resources/luxe.css
@@ -72,6 +72,10 @@ header .logo img {
     width: 60px;
 }
 
+header nav {
+    margin: 0 -15px;
+}
+
 header nav ul{
     text-align: center;
     list-style: none;
@@ -80,7 +84,7 @@ header nav ul{
 
 header nav ul li{
     display: inline-block;
-    padding: 0 10px;
+    padding: 0 5px;
 }
 
 header nav ul li .menuitem{
